# python-real-world-projects

project_0/: README.md  pyproject.toml  requirements-dev.txt  requirements.txt  tox.ini
project_0/docs/: conf.py  index.rst
project_0/docs/_build/doctrees/: api.doctree  environment.pickle  index.doctree  overview.doctree
project_0/docs/_build/html/: .buildinfo  api.html  genindex.html  index.html  objects.inv  overview.html  py-modindex.html  search.html  searchindex.js
project_0/docs/_build/html/_sources/: api.rst.txt  overview.rst.txt
project_0/src/: hello_world.py
project_0/tests/: environment.py  test_hello_world.py
project_0/tests/features/: hello_world.feature
project_0/tests/steps/: hw_cli.py
