# Python Real-World Projects
# Project Zero: A template for other projects

[build-system]
requires = ["setuptools", "wheel"]  # PEP 508 specifications.
build-backend = "setuptools.build_meta"

[project]
name = "project_0"
version = "1.0.0"
authors = [
    {name = "Mauricio Paternina", email = "hello@mauric.io"},
]
description = "Real-World Python Projects -- Project 0."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
]
dependencies = [
    # Packages this project requires
]
[project.optional-dependencies]
dev = [
    # Development tools to work on this project
    "sphinx==8.0.2",
    "sphinxcontrib-plantuml==0.30",
    "pip-tools==7.4.1",
]
test = [
    # Testing tools to test this project
    "pytest==8.3.3",
    "tox==4.18.1",
    "behave==1.2.6",
]
